--- a/TrueEntropy/Base.lproj/Main.storyboard
+++ b/TrueEntropy/Base.lproj/Main.storyboard
@@ -21,34 +21,34 @@
         <!--Generation Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="GenerationController" customModule="TrueEntropy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="GenerationController" customModule="TrueEntropy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera_bg.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="9Cd-ut-6Hz">
-                                <rect key="frame" x="0.0" y="347" width="375" height="300"/>
+                                <rect key="frame" x="0.0" y="367" width="375" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="300" id="RAS-5N-qkf"/>
                                     <constraint firstAttribute="height" constant="300" id="sfr-2u-rO5"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5eA-nl-XDH" userLabel="Camera View">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="397"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="417"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GENERATING ENTROPY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXX-2X-76n">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="397"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="417"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Extrabold" family="Open Sans" pointSize="19"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                         <size key="shadowOffset" width="0.0" height="0.0"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scale.png" translatesAutoresizingMaskIntoConstraints="NO" id="1LX-76-osc">
-                                        <rect key="frame" x="30" y="0.0" width="315" height="397"/>
+                                        <rect key="frame" x="30" y="0.0" width="315" height="417"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="400" id="eoB-qJ-O09"/>
                                         </constraints>
@@ -84,7 +84,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wy6-iY-eN0">
-                                <rect key="frame" x="0.0" y="397" width="375" height="250"/>
+                                <rect key="frame" x="0.0" y="417" width="375" height="250"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="6CF-CL-3DI"/>
